--- a/templates/auth.html
+++ b/templates/auth.html
@@ -28,7 +28,7 @@
             {% endif %}
             {% endblock %}
             <div class="row">
-                <form class="row-form" action="/login/user" method="post">
+                <form class="row-form" action="/login/token" method="post">
                     <input
                         class="registration_inputs"
                         type="text"
