--- a/templates/registration.html
+++ b/templates/registration.html
@@ -23,7 +23,7 @@
             {% endif %}
             {% endblock %}
             <div class="row">
-                    <form class="row-form" action="/register/user/" method="post">
+                    <form class="row-form" action="/register/successful" method="post">
                     <input
                         class="registration_inputs"
                         type="text"
@@ -48,7 +48,7 @@
                         id="telegram"
                         placeholder="Телеграм"
                     />
-                    <button type="submit" class="reg-button" >Зарегистрироваться</button>
+                    <button type="submit" class="reg-button">Зарегистрироваться</button>
                     <p class="auth_text">Есть аккаунт? <a href="/login/" class="go_auth">Войти</a></p>
                 </form>
             </div>
