--- a/templates/auth.html
+++ b/templates/auth.html
@@ -33,8 +33,8 @@
                         class="registration_inputs"
                         type="text"
                         required
-                        name="username"
-                        id="username"
+                        name="email"
+                        id="email"
                         placeholder="email"
                     />
                     <input
@@ -54,27 +54,4 @@
             </div>
         </div>
     </body>
-    <script>
-<!--        function functionToExecute() {-->
-<!--        const loginForm = document.querySelector(".row-form")-->
-
-<!--        loginForm.addEventListener("submit", (e) => {-->
-<!--          e.preventDefault()-->
-
-<!--          const formData = new FormData(loginForm)-->
-<!--            console.log(formData)-->
-<!--          fetch("http://localhost:8000/login/token", {-->
-<!--          mode: 'no-cors',-->
-<!--            method: "POST",-->
-<!--            body: formData,-->
-<!--          })-->
-<!--          .then((res) => res.json())-->
-<!--          .then((token) => {-->
-<!--            console.log("Token", token)-->
-<!--            // window.location.href = "/"-->
-<!--          })-->
-<!--          .catch((err) => {-->
-<!--            console.log("Error", err)-->
-<!--          })})}-->
-    </script>
 </html>
