--- a/templates/auth.html
+++ b/templates/auth.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Parser App</title>
-        <link rel="stylesheet" href="/static/auth_styles.css" />
+        <link rel="stylesheet" href="/static/styles.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -45,7 +45,7 @@
                         id="password"
                         placeholder="password"
                     />
-                    <button type="submit" class="reg-button" onclick="functionToExecute()">Войти</button>
+                    <button type="submit" class="reg-button">Войти</button>
                     <p class="auth_text">
                         Нет аккаунта?
                         <a href="/register" class="go_auth">Зарегистрироваться</a>
