--- a/templates/registration.html
+++ b/templates/registration.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Parser App</title>
-        <link rel="stylesheet" href="/static/auth_styles.css"/>
+        <link rel="stylesheet" href="/static/styles.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
